
2020-06-26  Simon Sobisch <simonsobisch@gnu.org>

	* pplex.l: allow more characters in $DISPLAY

2020-06-23  Ron Norman <rjn@inglenet.com>

	* parser.y: Changed to use common parsing for [NOT] EXCEPTION
			Added [NOT] EXCEPTION to DELETE FILE
	* codegen.c: Changes for EXCEPTION handling for DELETE FILE
	* typeck.c: Changes for EXCEPTION handling for DELETE FILE
			and some code tidy up

2020-06-20  Edward Hart <edward.dan.hart@gmail.com>

	* parser.y (emit_entry): added parameter for main program as pending
	  (FR #357).

2020-06-18  Edward Hart <edward.dan.hart@gmail.com>

	* codegen.c (output_local_fields): fixed bug #648, where variable length
	  parameters' were not cached when the unrelated local_field_cache was
	  empty.
	* codegen.c: minor refactoring of duplicated code.

2020-06-14  Simon Sobisch <simonsobisch@gnu.org>

	* cobc.c (process_run): use of new COBC_NAME + COBCRUN_NAME now defined in
	  defaults.h, if available use the fullname of the current process instead
	  of fixed "cobc" to get the path for cobcrun, extract some code to
	  resolve_name_from_cobc
	* cobc.c (main, process_run): fix compile from stdin with job-run
	* field.c (validate_any_length_item): allow ANY LENGTH for PIC 1

2020-06-12  Simon Sobisch <simonsobisch@gnu.org>

	* cobc.c (process_command_line) [_WIN32]: simplified code;
	  only convert from /opt to -opt if POSIXLY_CORRECT is not set;
	  added conversion from /? to --help

2020-06-10  Simon Sobisch <simonsobisch@gnu.org>

	Bug #635 added checks for duplicate USING BY REFERENCE items
	* parser.y (emit_entry), typeck.c (cb_emit_call): collect BY REFERENCE
	  items and check for duplicates

2020-06-09  Simon Sobisch <simonsobisch@gnu.org>

	* cobc.c (call_system, output_return): new functions extracted from
	  different places to have the nearly identical calls to system and the
	  code handling verbosity and exit codes in one place
	* cobc.c (call_system): don't raise SIGINT/SIGQUIT because of sub-process