@@ -4616,6 +4616,54 @@ prog.cob:43: error: syntax error, unexpected DELIMITED, expecting INTO
 AT_CLEANUP
 
 
+AT_SETUP([UNSTRING COUNT clause])
+AT_KEYWORDS([misc])
+
+AT_DATA([prog.cob], [
+       IDENTIFICATION  DIVISION.
+       PROGRAM-ID.     prog.
+
+       DATA            DIVISION.
+       WORKING-STORAGE SECTION.
+       01  valid-1       PIC 9.
+       01  valid-2       BINARY-LONG.
+       01  valid-3       PIC 99 COMP-3.
+
+       01  invalid-1     PIC 99V99.
+       01  invalid-2     FLOAT-LONG.
+       01  invalid-3     PIC 99PP.
+       01  invalid-4     PIC VPP99.
+       01  invalid-5     PIC X(30).
+           88  invalid-6 VALUE "abc".
+
+       01  x             PIC X(9).
+       01  y             PIC X(9).
+
+       PROCEDURE       DIVISION.
+           UNSTRING x INTO y COUNT valid-1
+           UNSTRING x INTO y COUNT valid-2
+           UNSTRING x INTO y COUNT valid-3
+
+           UNSTRING x INTO y COUNT invalid-1
+           UNSTRING x INTO y COUNT invalid-2
+           UNSTRING x INTO y COUNT invalid-3
+           UNSTRING x INTO y COUNT invalid-4
+           UNSTRING x INTO y COUNT invalid-5
+           UNSTRING x INTO y COUNT invalid-6
+           .
+])
+
+AT_CHECK([$COMPILE_ONLY prog.cob], [1], [],
+[prog.cob:26: error: COUNT item 'invalid-1' must be an integer
+prog.cob:27: error: COUNT item 'invalid-2' must be numeric and an integer
+prog.cob:28: error: COUNT item 'invalid-3' may not have PICTURE with P in it
+prog.cob:29: error: COUNT item 'invalid-4' must be an integer
+prog.cob:30: error: COUNT item 'invalid-5' must be numeric and an integer
+prog.cob:31: error: condition-name not allowed here: 'invalid-6'
+])
+AT_CLEANUP
+
+
 AT_SETUP([use of program-prototypes])
 AT_KEYWORDS([misc])
 
@@ -6544,8 +6592,8 @@ prog.cob:59: error: JSON/XML GENERATE input record may not be reference modified
 prog.cob:61: error: JSON/XML GENERATE input record may not have RENAMES clause
 prog.cob:66: error: JSON/XML GENERATE input record has subrecords with non-unique names
 prog.cob:67: error: all the children of 'all-filler-rec' are ignored in JSON/XML GENERATE
-prog.cob:70: error: COUNT IN item must be numeric and an integer
-prog.cob:72: error: COUNT IN item may not have PICTURE with P in it
+prog.cob:70: error: COUNT IN item 'float-item' must be numeric and an integer
+prog.cob:72: error: COUNT IN item 'pic-p-item' may not have PICTURE with P in it
 prog.cob:89: warning: OCCURS items in JSON/XML GENERATE is not implemented
 prog.cob:89: warning: WITH ATTRIBUTES specified, but no attributes can be generated
 prog.cob:89: error: NAMESPACE must be a valid URI
