@@ -1,4 +1,8 @@
 
+2020-06-30  Edward Hart <edward.dan.hart@gmail.com>
+
+	* typeck.c: strengthened syntax checks on UNSTRING ... COUNT (bug #653).
+
 2020-06-26  Simon Sobisch <simonsobisch@gnu.org>
 
 	* pplex.l: allow more characters in $DISPLAY
